--- a/admin.html
+++ b/admin.html
@@ -450,7 +450,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="data/product.js"></script>
+    <script src="data/dataproduct.js"></script>
     <script src="data/user.js"></script>
     <script src="js/dungchung.js"></script>
     <script src="data/dataquanly.js"></script>
