cập nhật  lại cart

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="enter">
                     <p>Tài khoản</p>
                 </div>
-                <i class="material-icons icon red">local_mall</i>
+                <a href="cart.html"><i class="material-icons icon red">local_mall</i></a>
                 <div class="enter"></div>
             </ul>
         </nav>
@@ -179,5 +179,6 @@
 <script src="js/index.js"></script>
 <script src="js/tabproduct.js"></script>
 <script src="data/dataproduct.js"></script>
+<script src="js/cart.js"></script>
 
 </html>
