--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="enter">
                     <p>Hệ thống</p>
                 </div>
-                <i class="material-icons icon red">person</i>
+                <a href="dangnhap.html"><i class="material-icons icon red">person</i></a>
                 <div class="enter">
                     <p>Tài khoản</p>
                 </div>
