--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
         <nav>
             <ul class="menu">
                 <li><a href="#" onclick="showHome();">TRANG CHỦ</a></li>
-                <li><a href="#" onclick="showNews();">TIN TỨC</a></li>
-                <li><a href="#" onclick="showPromotions();">KHUYẾN MÃI</a></li>
                 <li class="dropdown">
                     <a href="#">SẢN PHẨM</a>
                     <ul class="dropdown-content">
@@ -57,6 +55,8 @@
                         <li><a href="#" onclick="cookies();">Cookies</a></li>
                     </ul>
                 </li>
+                                <li><a href="#" onclick="showNews();">TIN TỨC</a></li>
+                <li><a href="#" onclick="showPromotions();">KHUYẾN MÃI</a></li>
             </ul>
         </nav>
 
@@ -79,7 +79,7 @@
         </div>
 
         <button class="prev" onclick="prevSlide()">❮</button>
-        <button class="next" onclick="nextSlide()">❯</button>
+        <button class="next" onclick="nextSlide()">❯</button>5
     </div>
     <section id="product-section">
         <div id="home" class="product-tab" style="display:none;"> <!-- Nội dung cho TRANG CHỦ -->
