--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <i class="material-icons icon red">person</i>
                 <div class="enter">
-                    <p>Tài khoản</p>
+                    <p onclick="showLoginForm()">Đăng nhập</p>
                 </div>
                 <a href="cart.html"><i class="material-icons icon red">local_mall</i></a>
                 <div class="enter"></div>
@@ -55,7 +55,7 @@
                         <li><a href="#" onclick="cookies();">Cookies</a></li>
                     </ul>
                 </li>
-                                <li><a href="#" onclick="showNews();">TIN TỨC</a></li>
+                        <li><a href="#" onclick="showNews();">TIN TỨC</a></li>
                 <li><a href="#" onclick="showPromotions();">KHUYẾN MÃI</a></li>
             </ul>
         </nav>
@@ -171,14 +171,106 @@
             <div class="inline-container">
                 <p>Contact Information</p>
             </div>
-
         </div>
     </footer>
 </body>
+<div class="background2">
+    <div class="btn_close"><i class="material-icons icon-small">close</i></div>
+    <div class="modal" id="form-login">
+        <div class="modal_form">
+            <div class="input_form">
+                <div class="title_input">
+                    <h1>Welcome to myBakery</h1>
+                    <p>Sign up to order now</p>
+                </div>
+
+                <div class="box_input">
+                    <input type="text" id="name" placeholder="Full name">
+                </div>
+
+                <div class="box_input">
+                    <input type="text" id="username" placeholder="Username">
+                </div>
+
+                <div class="box_input">
+                    <input type="password" id="password" placeholder="Password">
+                </div>
+
+                <div class="box_input">
+                    <input type="text" id="email" placeholder="Email">
+                </div>
+
+                <div class="box_input">
+                    <input type="text" id="phone" placeholder="Phone Number">
+                </div>
+
+                <div class="box_input">
+                    <select id="pulldown_menu">
+                        <option value="none" selected>Select a District</option>
+                        <option value="quan1">Quận 1</option>
+                        <option value="quan2">Quận 3</option>
+                        <option value="quan4">Quận 4</option>
+                        <option value="quan5">Quận 5</option>
+                        <option value="quan6">Quận 6</option>
+                        <option value="quan7">Quận 7</option>
+                        <option value="quan8">Quận 8</option>
+                        <option value="quan10">Quận 10</option>
+                        <option value="quan11">Quận 11</option>
+                        <option value="quan12">Quận 12</option>
+                        <option value="quantanbinh">Quận Tân Bình</option>
+                        <option value="quantanphu">Quận Tân Phú</option>
+                        <option value="quanbinhtan">Quận Bình Tân</option>
+                        <option value="quanbinhthanh">Quận Bình Thạnh</option>
+                        <option value="quangovap">Quận Gò Vấp</option>
+                        <option value="quanphunhuan">Quận Phú Nhuận</option>
+                    </select>
+                </div>
+                
+                <div class="login">
+                    <button class="btn_submit" onclick="addData()">Sign Up</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="outside">
+            Already have an account?
+            <a class="btn" onclick="showSignUp()">Log In</a>
+        </div>
+
+        <div class="policy">
+            This site is protected by the Google <a href="https://policies.google.com/privacy" class="btn" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" class="btn" target="_blank">Terms of Service</a> apply.
+        </div>
+    </div>
+
+    <div class="modal" id="form-signup">
+        <div class="modal_form">
+            <div class="input_form">
+                <div class="title_input">
+                    <h1>Welcome back</h1>
+                    <p>We're happy to see you</p>
+                </div>
+
+                <div class="box_input">
+                    <input type="text" id="usernamelg" placeholder="Username">
+                </div>
+
+                <div class="box_input">
+                    <input type="password" id="passwordlg" placeholder="Password">
+                </div>
+                <div class="login">
+                    <button class="btn_submit" onclick="checkLogin()">Log In</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="outside">
+            Don't have an account?
+            <a class="btn" onclick="showLogin()">Sign up</a>
+        </div>
+    </div>
+</div>
 <script src="js/product.js"></script>
 <script src="js/index.js"></script>
 <script src="js/tabproduct.js"></script>
 <script src="data/dataproduct.js"></script>
-
-
 </html>
