--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="enter">
                     <p>Hệ thống</p>
                 </div>
-                <a href="dangnhap.html"><i class="material-icons icon red">person</i></a>
+                <i class="material-icons icon red">person</i>
                 <div class="enter">
                     <p onclick="showLoginForm()">Đăng nhập</p>
                 </div>
@@ -178,58 +178,36 @@
     <div class="btn_close"><i class="material-icons icon-small">close</i></div>
     <div class="modal" id="form-login">
         <div class="modal_form">
-            <div class="input_form">
+            <form class="input_form" onsubmit="return logIn(form,this);">
                 <div class="title_input">
                     <h1>Welcome to myBakery</h1>
                     <p>Sign up to order now</p>
                 </div>
 
                 <div class="box_input">
-                    <input type="text" id="name" placeholder="Full name">
+                    <input type="text" name="hoten" placeholder="Full name">
                 </div>
 
                 <div class="box_input">
-                    <input type="text" id="username" placeholder="Username">
+                    <input type="text" name="newUser" placeholder="Username">
                 </div>
 
                 <div class="box_input">
-                    <input type="password" id="password" placeholder="Password">
+                    <input type="password" name="newPass" placeholder="Password">
                 </div>
 
                 <div class="box_input">
-                    <input type="text" id="email" placeholder="Email">
+                    <input type="text" name="email" placeholder="Email">
                 </div>
 
                 <div class="box_input">
-                    <input type="text" id="phone" placeholder="Phone Number">
-                </div>
-
-                <div class="box_input">
-                    <select id="pulldown_menu">
-                        <option value="none" selected>Select a District</option>
-                        <option value="quan1">Quận 1</option>
-                        <option value="quan2">Quận 3</option>
-                        <option value="quan4">Quận 4</option>
-                        <option value="quan5">Quận 5</option>
-                        <option value="quan6">Quận 6</option>
-                        <option value="quan7">Quận 7</option>
-                        <option value="quan8">Quận 8</option>
-                        <option value="quan10">Quận 10</option>
-                        <option value="quan11">Quận 11</option>
-                        <option value="quan12">Quận 12</option>
-                        <option value="quantanbinh">Quận Tân Bình</option>
-                        <option value="quantanphu">Quận Tân Phú</option>
-                        <option value="quanbinhtan">Quận Bình Tân</option>
-                        <option value="quanbinhthanh">Quận Bình Thạnh</option>
-                        <option value="quangovap">Quận Gò Vấp</option>
-                        <option value="quanphunhuan">Quận Phú Nhuận</option>
-                    </select>
+                    <input type="text" name="sdt" placeholder="Phone Number">
                 </div>
                 
                 <div class="login">
-                    <button class="btn_submit" onclick="addData()">Sign Up</button>
+                    <button class="btn_submit" type="submit">Sign Up</button>
                 </div>
-            </div>
+            </form>
         </div>
 
         <div class="outside">
@@ -244,23 +222,23 @@
 
     <div class="modal" id="form-signup">
         <div class="modal_form">
-            <div class="input_form">
+            <form class="input_form" onsubmit="return signUp(form,this);">
                 <div class="title_input">
                     <h1>Welcome back</h1>
                     <p>We're happy to see you</p>
                 </div>
 
                 <div class="box_input">
-                    <input type="text" id="usernamelg" placeholder="Username">
+                    <input type="text" name='username' placeholder="Username">
                 </div>
 
                 <div class="box_input">
-                    <input type="password" id="passwordlg" placeholder="Password">
+                    <input type="password" name="pass" placeholder="Password">
                 </div>
                 <div class="login">
-                    <button class="btn_submit" onclick="checkLogin()">Log In</button>
+                    <button class="btn_submit" type="submit">Log In</button>
                 </div>
-            </div>
+            </form>
         </div>
 
         <div class="outside">
