--- a/cart.html
+++ b/cart.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Store</title>
+    <title>Online Store - Checkout</title>
     <link rel="stylesheet" href="css/checkout.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="cart.js" defer></script> <!-- Liên kết tới cart.js -->
     <script src="checkout.js" defer></script>
 </head>
 <body>
