--- a/nguoidung.html
+++ b/nguoidung.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
-    <link rel="stylesheet" href="trangchu.css">
-    <link rel="stylesheet" href="taikhoan.css">
-    <link rel="stylesheet" href="nguoidung.css">
+    <link rel="stylesheet" href="css/trangchu.css">
+    <link rel="stylesheet" href="css/taikhoan.css">
+    <link rel="stylesheet" href="css/nguoidung.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="trangchu.js" defer></script>
-    <script src="dungchung.js"></script>
-    <script src="classes.js"></script>
+    <script src="js/trangchu.js" defer></script>
+    <script src="js/dungchung.js"></script>
+    <script src="js/classes.js"></script>
 </head>
 
 <body>
