làm mới trang chủ

--- a/index.html
+++ b/index.html
@@ -103,11 +103,36 @@
         <button class="next" onclick="nextSlide()">❯</button>5
     </div>
     <section id="product-section">
-        <div id="home" class="product-tab" style="display:none;"> <!-- Nội dung cho TRANG CHỦ -->
-            <h1>Chào mừng đến với cửa hàng trực tuyến!</h1>
-            <p>Khám phá các sản phẩm tuyệt vời của chúng tôi.</p>
-        </div>
+        <div id="home" class="introduce" style="display:none;"> <!-- Nội dung cho TRANG CHỦ -->
+            <div class="home-container">
+                <div class="home">
+                    <img src="image/anhbia3.png" class="picture" alt="">
+                    <div class="adv">RỦ RÊ TIỆC CHILL - NGẠI CHI VỀ GIÁ 😆<br>
+                        🍩 Chiêu đãi các "cạ cứng" của Paris Baguette với vô vàn bánh ngon, đa dạng từ bánh mặn đến bánh ngọt, bánh mì đến bánh ngàn lớp.<br>
+                        😍 Thỏa sức lựa chọn 5 bánh bất kì chỉ với 150k, cho bữa tiệc xế chiều thịnh soạn cùng bạn bè, đồng nghiệp thật là chill ✌️<br>
+                        📌 Chương trình diễn ra đến hết ngày 31/03/2024.<br>
+                        Chỉ áp dụng khi mua trực tiếp tại cửa hàng.
+                        Không áp dụng đồng thời cùng các chương trình khuyến mãi khác.</div>
+                </div>
+                
+                <div class="home">
+                    <img src="image/anhbia2.png" class="picture" alt="">
+                    <div class="adv">Nắng không còn gay gắt như độ giữa mùa 🔆<br>
+                        Chẳng mấy chốc nữa mà mùa Thu sang.<br>
+                        😍 Điểm thêm chút ngọt ngào, vàng tươi cho ngày cuối hạ thôi ảm đạm với những chiếc bánh Bắp bạn nhé!<br>
+                        🌽 Thiên đường "Bắp" với đủ loại từ bánh ngọt đầy ắp kem, bánh ngàn lớp nướng thơm lừng, cho đến bánh kem và pudding bắp béo ngậy.<br>
+                        🎉 Ghé ngay cửa hàng gần nhất để trải nghiệm những sản phẩm mới cùng nhiều chương trình khuyến mãi hấp dẫn kèm theo nhé!</div>
+                </div>
 
+                <div class="home">
+                    <img src="image/anhbia1.jpg" class="picture" alt="">
+                    <div class="adv">🎂 FRUITY FRESH CREAM CAKE luôn chiều lòng được mọi thực khách.<br>
+                        Không chỉ bởi vẻ ngoài rực rỡ, mà hương vị lại càng đặc biệt khó quên với nhân cocktail trái cây len lõi trong từng lớp bánh bông lan mềm ẩm, được gói gọn trong lớp kem sữa tươi trắng nõn và ngọt ngào 😍<br>
+                        ✨ FRUITY FRESH CREAM CAKE là lựa chọn lý tưởng cho các buổi tiệc, lễ kỷ niệm, hay đơn giản là một bữa xế chiều để thưởng thức cùng gia đình, bạn bè.<br>
+                        🎂 Tủ bánh kem của Paris Baguette luôn được "làm mới" mỗi ngày chờ bạn ghé qua!</div>
+                </div>
+            </div>
+        </div>
         <div id="news" class="product-tab" style="display:none;"> <!-- Nội dung cho TIN TỨC -->
             <h1>Tin Tức Mới Nhất</h1>
             <p>Cập nhật tin tức và sự kiện mới nhất từ cửa hàng của chúng tôi.</p>
@@ -148,9 +173,9 @@
         <div id="cookies" class="product-tab" style="display:none;">
             <!-- Các sản phẩm Cookies sẽ được hiển thị ở đây -->
         </div>
-        <div class="pagination" id="pagination"></div>
+        <div class="pagination" id="pagination"></div> 
+        </div>
     </section>
-
     <footer>
         <div class="overlay"></div>
         <div id="content">
