--- a/product.html
+++ b/product.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/taikhoan.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="js/trangchu.js" defer></script>
+    <!-- <script src="js/trangchu.js" defer></script>
     <script src="js/dungchung.js"></script>
-    <script src="js/classes.js"></script>
+    <script src="js/classes.js"></script> -->
 </head>
 
 <body>
@@ -303,5 +303,6 @@
 
     </section>
     <script>addContainTaiKhoan()</script>
-    <script src="data/product.js"></script>
+    <script src="data/dataproduct.js"></script>
+    
 </body>
