--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <ul class="menu">
                 <li><a href="#" onclick="showHome();">TRANG CHỦ</a></li>
                 <li class="dropdown">
-                    <a href="product.html">SẢN PHẨM</a>
+                    <a href="">SẢN PHẨM</a>
                     <ul class="dropdown-content">
                         <li><a href="#" onclick="wholecake()();">Whole Cake</a></li>
                         <li><a href="#" onclick="shortcake();">Short Cake</a></li>
