--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <button class="next" onclick="nextSlide()">❯</button>5
     </div>
     <section id="product-section">
-        <div id="home" class="introduce" style="display:none;"> <!-- Nội dung cho TRANG CHỦ -->
+        <div id="home" class="product-tab" style="display:none;"> <!-- Nội dung cho TRANG CHỦ -->
             <div class="home-container">
                 <div class="home">
                     <img src="image/anhbia3.png" class="picture" alt="">
@@ -131,8 +131,7 @@
                         ✨ FRUITY FRESH CREAM CAKE là lựa chọn lý tưởng cho các buổi tiệc, lễ kỷ niệm, hay đơn giản là một bữa xế chiều để thưởng thức cùng gia đình, bạn bè.<br>
                         🎂 Tủ bánh kem của Paris Baguette luôn được "làm mới" mỗi ngày chờ bạn ghé qua!</div>
                 </div>
-            </div>
-        </div>
+            </div>        </div>
         <div id="news" class="product-tab" style="display:none;"> <!-- Nội dung cho TIN TỨC -->
             <h1>Tin Tức Mới Nhất</h1>
             <p>Cập nhật tin tức và sự kiện mới nhất từ cửa hàng của chúng tôi.</p>
