--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <ul class="menu">
                 <li><a href="#" onclick="showHome();">TRANG CHỦ</a></li>
                 <li class="dropdown">
-                    <a href="">SẢN PHẨM</a>
+                    <a href="#" onclick="wholecake()"">SẢN PHẨM</a>
                     <ul class="dropdown-content">
-                        <li><a href="#" onclick="wholecake()();">Whole Cake</a></li>
+                        <li><a href="#" onclick="wholecake();">Whole Cake</a></li>
                         <li><a href="#" onclick="shortcake();">Short Cake</a></li>
                         <li><a href="#" onclick="bread();">Bread And Pastry</a></li>
                         <li><a href="#" onclick="dessert();">Dessert</a></li>
