--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         😍 Thỏa sức lựa chọn 5 bánh bất kì chỉ với 150k, cho bữa tiệc xế chiều thịnh soạn cùng bạn bè, đồng nghiệp thật là chill ✌️<br>
                         📌 Chương trình diễn ra đến hết ngày 31/03/2024.<br>
                         Chỉ áp dụng khi mua trực tiếp tại cửa hàng.
-                        Không áp dụng đồng thời cùng các chương trình khuyến mãi hkác.</div>
+                        Không áp dụng đồng thời cùng các chương trình khuyến mãi khác.</div>
                 </div>
                 
                 <div class="home">
