--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <li class="dropdown">
                     <a>SẢN PHẨM</a>
                     <ul class="dropdown-content">
-                        <li><a href="#" onclick="wholecake()();">Whole Cake</a></li>
+                        <li><a href="#" onclick="wholecake();">Whole Cake</a></li>
                         <li><a href="#" onclick="shortcake();">Short Cake</a></li>
                         <li><a href="#" onclick="bread();">Bread And Pastry</a></li>
                         <li><a href="#" onclick="dessert();">Dessert</a></li>
