--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 
 <body>
     <header>
-        <script>window.onload = function () {
-                khoiTao();
-            }</script>
         <nav>
             <ul>
                 <li>
@@ -71,7 +68,7 @@
             <ul class="menu">
                 <li><a href="#" onclick="showHome();">TRANG CHỦ</a></li>
                 <li class="dropdown">
-                    <a href="#" onclick="wholecake()"">SẢN PHẨM</a>
+                    <a href="#" onclick="wholecake()">SẢN PHẨM</a>
                     <ul class="dropdown-content">
                         <li><a href="#" onclick="wholecake();">Whole Cake</a></li>
                         <li><a href="#" onclick="shortcake();">Short Cake</a></li>
