--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </li>
                 <li class="item">
 
-                    <form action="/search" method="GET">
+                    <form action="/search" method="GET" class="search-form">
                         <input type="text" name="query" placeholder="Tìm kiếm..." class="search-input">
                         <button type="submit" class="search-button">
                             <i class="material-icons">search</i>
